# workflow-as-list

./: .commitlintrc.json  .env  .env.local.example  .gitignore  .pre-commit-config.yaml  .test-results-comprehensive.md  .test-results.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SYNTAX.ebnf  SYNTAX.md  apiscope.ini  cicd-todo.workflow.list.md  pyproject.toml  todo.workflow.list.md
.github/: COMMIT_CONVENTION.md
.github/ISSUE_TEMPLATE/: 01_design_decision.yml  02_feature_request.yml  03_question.yml  04_bug_report.yml
.github/workflows/: ci.yml  release.yml  validate.yml
.tmp/: traceflux-plan.md
docs/: AGENT-INTEGRATION.md  README.md  v0.1.1-plan.md
docs/design/: README.md
docs/design/cli/: 003-commands.md  004-output.md
docs/design/overview/: 001-principles.md  002-architecture.md
docs/design/runtime/: 007-execution.md  008-server.md
docs/design/security/: 005-layers.md  006-config.md
docs/research/: README.md
docs/research/cognitive/: 001-hiding.md
docs/research/encoding/: 002-ascii.md
docs/research/theory/: 003-limits.md  004-derivation.md
examples/: README.md  demo.workflow.list  simple.workflow.list  test.workflow.list
examples/decision/: route.workflow.list
examples/git/: commit-message.workflow.list  commit-type.workflow.list  commit-validate.workflow.list  commit.workflow.list
scripts/: calc-task-range.py  check-code-quality.py  check-docs-quality.py  check-headers.py  logging.py
src/workflow_as_list/: __init__.py  cli.py  config.py  constants.py  models.py  server.py  server_manager.py
src/workflow_as_list/cli/: __init__.py  approve.py  check.py  exec.py  init.py  list.py  reject.py  run.py  serve.py  server.py  show.py
src/workflow_as_list/executor/: __init__.py  loader.py  (+2 more)
tests/: __init__.py  test_audit_workflow_e2e.py  test_cli_component.py  test_execution_workflow_e2e.py  test_executor_unit.py  test_parser.py  test_pipeline_integration.py  test_security_unit.py  test_server_component.py  test_state_persistence_e2e.py
workflow/: README.md  commit.workflow.list  decision-capture.workflow.list  main.workflow.list  test-import.workflow.list  test-local-import.workflow.list  test-remote-import.workflow.list
(+8 files in other folders)
